<resources>
    <string name="app_name">FitBook</string>
    <string name="text_users">All Users</string>
    <string name="text_meals">All Meals</string>
    <string name="text_dietplans">All Diet Plans</string>
    <string name="text_exercises">All Exercises</string>
    <string name="text_workoutplans">All Workout Plans</string>
    <string name="hint_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_meal_name">Meal Name</string>
    <string name="hint_meal_info">Nutritional Information</string>
    <string name="hint_meal_prep">Preparation Instructions</string>
    <string name="hint_diet_plan_name">Meal Name</string>
    <string name="hint_diet_plan_breakfast">Breakfast</string>
    <string name="hint_diet_plan_lunch">Lunch</string>
    <string name="hint_diet_plan_dinner">Dinner</string>
    <string name="hint_diet_plan_snack">Snack</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_exercise_info">Exercise Information</string>
    <string name="hint_workout_plan_name">Workout Plan Name</string>
    <string name="hint_workout_plan_info">Workout Plan Information</string>

    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Welcome to the FitBook App</string>
</resources>
